hotfix/bxms-168 make transparent background on top leaderboard ads. Fix spacing issues (#187)
Implements https://bauer-media.atlassian.net/browse/BXMS-168

--- a/src/styles/_ads.scss
+++ b/src/styles/_ads.scss
@@ -93,12 +93,13 @@
     &--section-top-leaderboard {
         margin-bottom: $column-gutter;
 
-        @media #{$medium-up} {
-            margin: 0 auto 20px;
+        @media #{$medium-only}{
+            margin: 20px auto;
         }
 
         @media #{$small-only} {
             @include grey-mobile-banner();
+            margin-bottom: 10px;
         }
     }
 
