--- a/src/styles/components/header/_header.scss
+++ b/src/styles/components/header/_header.scss
@@ -4,7 +4,7 @@
 
     @media #{$medium-up} {
         text-align: left;
-        margin-bottom: $header-height-medium-up + 17px;
+        margin-bottom: 95px;
     }
 }
 
